# insurance-ai-toolkit

./: .dockerignore  .gitignore  CLAUDE_API_SETUP.md  CLAUDE_INTEGRATION_CHECKLIST.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  Makefile.deploy  PHASE_1_COMPLETION.md  PHASE_2_COMPLETION.md  PHASE_2_PLAN.md  PHASE_3_COMPLETION.md  README.md  ROADMAP.md  SESSION_SUMMARY_2025_12_15.md  VALIDATION_GUIDE.md  WEEK_1_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: DEMO_SCRIPT.md  GUARDIAN_CONTEXT.md  STREAMLIT_DESIGN.md  STREAMLIT_GUIDE.md
notebooks/: 01_reserves_vm21.ipynb  02_behavior_lapse.ipynb
scripts/: enrich_behavior_fixtures.py
src/insurance_ai/: __init__.py  cli.py  config.py
src/insurance_ai/crews/: __init__.py
src/insurance_ai/crews/behavior/: __init__.py  (+3 more)
src/insurance_ai/data/: __init__.py  fred_client.py  market_data.py
src/insurance_ai/web/: __init__.py  app.py  config.py
tests/fixtures/behavior/: behavior_va_001_itm.enriched.json  behavior_va_001_itm.json  behavior_va_002_otm.enriched.json  behavior_va_002_otm.json  behavior_va_003_atm.enriched.json  behavior_va_003_atm.json  behavior_va_004_high_withdrawal.enriched.json  behavior_va_004_high_withdrawal.json  synthetic_cohort_001.json
tests/fixtures/hedging/: hedge_port_001_large.json  hedge_va_001_standard.json  hedge_va_002_highvol.json  hedge_va_003_short.json  synthetic_portfolio_001.json
tests/fixtures/reserve/: fia_001_standard.json  fia_002_young.json  rila_001_standard.json  rila_002_large.json  synthetic_policy_001.json  va_001_standard.json  va_002_highrisk.json
tests/integration/: test_cross_crew_workflow.py  test_streamlit_pages.py
tests/unit/: test_behavior_crew.py  test_chart_functions.py  test_config.py  test_hedging_crew.py  test_reserve_crew.py  test_underwriting_crew.py
(+47 files in other folders)
